<resources>
    <string name="app_name">OCBC_Project_Task</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_logout">Logout</string>
    <string name="dashboard_mini_statement">Mini Statement</string>
    <string name="make_a_transfer_title">Make a Transfer</string>
    <string name="transfer_description">Description</string>
    <string name="transfer_amount">Amount</string>
    <string name="transfer_date">Date of Transfer</string>
    <string name="transfer_recipient">Recipient</string>
    <string name="transfer_cancel">cancel</string>
    <string name="transfer_submit">Submit</string>
    <string name="dashboard_account_balance">Account Balance</string>
    <string name="action_make_transfer">Make Transfer</string>
    <string name="success_transfer">Transfer Success</string>
    <string name="error_transfer">Transfer Error</string>
    <string name="error_dashboard">Dashboard Error</string>
    <string name="error_payees">Error payees</string>
</resources>